{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 62,
  "lineage": "0751b02a-addb-236c-4bd4-1da475ccc23a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "elk-static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.69.163.146",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-03-30T08:30:37.596-07:00",
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/addresses/elk-ipv4-address",
            "name": "elk-ipv4-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "eventer-jenkins-cluster",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/addresses/elk-ipv4-address",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/zones/us-central1-a/instances/elk-bastion"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_to_elasticsearch",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-30T08:11:13.809-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eventer-jenkins-cluster/global/firewalls/allow-ssh-to-elasticsearch",
            "log_config": [],
            "name": "allow-ssh-to-elasticsearch",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management",
            "priority": 1000,
            "project": "eventer-jenkins-cluster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/firewalls/allow-ssh-to-elasticsearch",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "bastion",
              "elasticsearch-ssh"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.elk-management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_to_kibana",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-30T08:11:13.630-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eventer-jenkins-cluster/global/firewalls/allow-ssh-to-kibana",
            "log_config": [],
            "name": "allow-ssh-to-kibana",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management",
            "priority": 1000,
            "project": "eventer-jenkins-cluster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/firewalls/allow-ssh-to-kibana",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "bastion",
              "kibana-ssh"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.elk-management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_to_logstash",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-30T08:11:13.649-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eventer-jenkins-cluster/global/firewalls/allow-ssh-to-logstash",
            "log_config": [],
            "name": "allow-ssh-to-logstash",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management",
            "priority": 1000,
            "project": "eventer-jenkins-cluster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/firewalls/allow-ssh-to-logstash",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "bastion",
              "logstash-ssh"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.elk-management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_traffic_into_elasticsearch",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9200"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-30T08:11:13.674-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eventer-jenkins-cluster/global/firewalls/allow-traffic-into-elasticsearch",
            "log_config": [],
            "name": "allow-traffic-into-elasticsearch",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management",
            "priority": 1000,
            "project": "eventer-jenkins-cluster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/firewalls/allow-traffic-into-elasticsearch",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "elasticseach"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.elk-management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_traffic_into_kibana",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5601"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-30T08:11:13.413-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eventer-jenkins-cluster/global/firewalls/allow-traffic-into-kibana",
            "log_config": [],
            "name": "allow-traffic-into-kibana",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management",
            "priority": 1000,
            "project": "eventer-jenkins-cluster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/firewalls/allow-traffic-into-kibana",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "kibana"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.elk-management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_traffic_into_logstash",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-30T08:11:13.567-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eventer-jenkins-cluster/global/firewalls/allow-traffic-into-logstash",
            "log_config": [],
            "name": "allow-traffic-into-logstash",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management",
            "priority": 1000,
            "project": "eventer-jenkins-cluster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/firewalls/allow-traffic-into-logstash",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "logstash"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.elk-management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "elk_allow_ssl_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-30T08:23:14.730-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eventer-jenkins-cluster/global/firewalls/elk-allow-ssl-to-bastion",
            "log_config": [],
            "name": "elk-allow-ssl-to-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management",
            "priority": 1000,
            "project": "eventer-jenkins-cluster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/firewalls/elk-allow-ssl-to-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "bastion"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.elk-management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "elasticsearch_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-03-30T08:24:16.872-07:00",
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/forwardingRules/elasticsearch-forwarding-rule",
            "ip_address": "104.154.51.160",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "elasticsearch-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "9200",
            "project": "eventer-jenkins-cluster",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/forwardingRules/elasticsearch-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/targetPools/elasticsearch-target-pool"
          },
          "dependencies": [
            "google_compute_http_health_check.elasticsearch_health_check",
            "google_compute_instance.elasticsearch",
            "google_compute_network.elk-management",
            "google_compute_subnetwork.elk-private_subnets",
            "google_compute_target_pool.elasticsearch-target-pool"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "kibana_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-03-30T08:24:26.916-07:00",
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/forwardingRules/kibana-forwarding-rule",
            "ip_address": "35.223.75.187",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "kibana-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "5601",
            "project": "eventer-jenkins-cluster",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/forwardingRules/kibana-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/targetPools/kibana-target-pool"
          },
          "dependencies": [
            "google_compute_http_health_check.kibana_health_check",
            "google_compute_instance.kibana",
            "google_compute_network.elk-management",
            "google_compute_subnetwork.elk-private_subnets",
            "google_compute_target_pool.kibana-target-pool"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "logstash_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-03-30T18:07:48.196-07:00",
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/forwardingRules/logstash-forwarding-rule",
            "ip_address": "35.202.155.131",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "logstash-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "5000",
            "project": "eventer-jenkins-cluster",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/forwardingRules/logstash-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/targetPools/logstash-target-pool"
          },
          "dependencies": [
            "google_compute_http_health_check.logstash_health_check",
            "google_compute_instance.logstash",
            "google_compute_network.elk-management",
            "google_compute_subnetwork.elk-private_subnets",
            "google_compute_target_pool.logstash-target-pool"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "elasticsearch",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/images/elastic-search-img",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/zones/us-central1-a/disks/elasticsearch"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/eventer-jenkins-cluster/zones/us-central1-a/instances/elasticsearch",
            "instance_id": "6163247565776734996",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "packer:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC/8yNFkOsnKgifvFP51yMWyDxyLUwvXVI/uKwDgm5u74HjLZw226p+ao5RSQ4aNWtnZ1Ufe8hXaO6PE5RLVAuHqHQWb5xCSDd9Yd7i+dIf5vtkTiP+ZRK8YXZHan3PtdP6bTyb/IK5W62w4cdAysEZf4z42WzsNnK8yUBo0T1r/f0ZFK2CJ9JKqZDflgUBHdpVZv3EoD8uQZCJ0PrE9QY8IpBJl5E0e9rzmvFgOamoEeef9/AnXy0//CJSyydxUM/2YvuNMz/jx15oOoOK9iHr8FtwE2nq84z+cT6k9zgvIpbo7kmvXvindWN8W6Q4voKwAr1efiNYONvHnepMWJQIahHN3UGL3iKSRPeLJb/fllJEoDUT7b3RpIMhGWdgfV0Cuh8mHiCN5EnvDCBaWkjlzLPrZnrzS1sy1HxrHtdVa4 [...]
            },
            "metadata_fingerprint": "HCTT5Vh82Ek=",
            "name": "elasticsearch",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management",
                "network_ip": "10.1.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/private-10-1-0-0",
                "subnetwork_project": "eventer-jenkins-cluster"
              }
            ],
            "project": "eventer-jenkins-cluster",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/zones/us-central1-a/instances/elasticsearch",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "elasticsearch",
              "elasticsearch-ssh"
            ],
            "tags_fingerprint": "l8VwyT0OcCU=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.elk-management",
            "google_compute_subnetwork.elk-private_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "elk-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-8-v20200316",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/zones/us-central1-a/disks/elk-bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/eventer-jenkins-cluster/zones/us-central1-a/instances/elk-bastion",
            "instance_id": "8693653283659172165",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "packer:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC/8yNFkOsnKgifvFP51yMWyDxyLUwvXVI/uKwDgm5u74HjLZw226p+ao5RSQ4aNWtnZ1Ufe8hXaO6PE5RLVAuHqHQWb5xCSDd9Yd7i+dIf5vtkTiP+ZRK8YXZHan3PtdP6bTyb/IK5W62w4cdAysEZf4z42WzsNnK8yUBo0T1r/f0ZFK2CJ9JKqZDflgUBHdpVZv3EoD8uQZCJ0PrE9QY8IpBJl5E0e9rzmvFgOamoEeef9/AnXy0//CJSyydxUM/2YvuNMz/jx15oOoOK9iHr8FtwE2nq84z+cT6k9zgvIpbo7kmvXvindWN8W6Q4voKwAr1efiNYONvHnepMWJQIahHN3UGL3iKSRPeLJb/fllJEoDUT7b3RpIMhGWdgfV0Cuh8mHiCN5EnvDCBaWkjlzLPrZnrzS1sy1HxrHtdVa4 [...]
            },
            "metadata_fingerprint": "HCTT5Vh82Ek=",
            "name": "elk-bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.69.163.146",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management",
                "network_ip": "10.1.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/public-10-1-1-0",
                "subnetwork_project": "eventer-jenkins-cluster"
              }
            ],
            "project": "eventer-jenkins-cluster",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/zones/us-central1-a/instances/elk-bastion",
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_address.elk-static",
            "google_compute_network.elk-management",
            "google_compute_subnetwork.elk-public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "kibana",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/images/kibana-img",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/zones/us-central1-a/disks/kibana"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/eventer-jenkins-cluster/zones/us-central1-a/instances/kibana",
            "instance_id": "5589466104266869524",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "packer:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC/8yNFkOsnKgifvFP51yMWyDxyLUwvXVI/uKwDgm5u74HjLZw226p+ao5RSQ4aNWtnZ1Ufe8hXaO6PE5RLVAuHqHQWb5xCSDd9Yd7i+dIf5vtkTiP+ZRK8YXZHan3PtdP6bTyb/IK5W62w4cdAysEZf4z42WzsNnK8yUBo0T1r/f0ZFK2CJ9JKqZDflgUBHdpVZv3EoD8uQZCJ0PrE9QY8IpBJl5E0e9rzmvFgOamoEeef9/AnXy0//CJSyydxUM/2YvuNMz/jx15oOoOK9iHr8FtwE2nq84z+cT6k9zgvIpbo7kmvXvindWN8W6Q4voKwAr1efiNYONvHnepMWJQIahHN3UGL3iKSRPeLJb/fllJEoDUT7b3RpIMhGWdgfV0Cuh8mHiCN5EnvDCBaWkjlzLPrZnrzS1sy1HxrHtdVa4 [...]
            },
            "metadata_fingerprint": "HCTT5Vh82Ek=",
            "name": "kibana",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management",
                "network_ip": "10.1.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/private-10-1-0-0",
                "subnetwork_project": "eventer-jenkins-cluster"
              }
            ],
            "project": "eventer-jenkins-cluster",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/zones/us-central1-a/instances/kibana",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kibana",
              "kibana-ssh"
            ],
            "tags_fingerprint": "umJxQ3k5CHU=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.elk-management",
            "google_compute_subnetwork.elk-private_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "logstash",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/images/logstash-img",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/zones/us-central1-a/disks/logstash"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/eventer-jenkins-cluster/zones/us-central1-a/instances/logstash",
            "instance_id": "6486458470574443284",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "packer:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC/8yNFkOsnKgifvFP51yMWyDxyLUwvXVI/uKwDgm5u74HjLZw226p+ao5RSQ4aNWtnZ1Ufe8hXaO6PE5RLVAuHqHQWb5xCSDd9Yd7i+dIf5vtkTiP+ZRK8YXZHan3PtdP6bTyb/IK5W62w4cdAysEZf4z42WzsNnK8yUBo0T1r/f0ZFK2CJ9JKqZDflgUBHdpVZv3EoD8uQZCJ0PrE9QY8IpBJl5E0e9rzmvFgOamoEeef9/AnXy0//CJSyydxUM/2YvuNMz/jx15oOoOK9iHr8FtwE2nq84z+cT6k9zgvIpbo7kmvXvindWN8W6Q4voKwAr1efiNYONvHnepMWJQIahHN3UGL3iKSRPeLJb/fllJEoDUT7b3RpIMhGWdgfV0Cuh8mHiCN5EnvDCBaWkjlzLPrZnrzS1sy1HxrHtdVa4 [...]
            },
            "metadata_fingerprint": "HCTT5Vh82Ek=",
            "name": "logstash",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management",
                "network_ip": "10.1.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/private-10-1-0-0",
                "subnetwork_project": "eventer-jenkins-cluster"
              }
            ],
            "project": "eventer-jenkins-cluster",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/zones/us-central1-a/instances/logstash",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "logstash",
              "logstash-ssh"
            ],
            "tags_fingerprint": "GoNt64ch4SI=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.elk-management",
            "google_compute_subnetwork.elk-private_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "elk-management",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/eventer-jenkins-cluster/global/networks/elk-management",
            "mtu": 0,
            "name": "elk-management",
            "project": "eventer-jenkins-cluster",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "elk-private_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-30T08:11:14.406-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/routers/private-router-elk-management",
            "name": "private-router-elk-management",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management",
            "project": "eventer-jenkins-cluster",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/routers/private-router-elk-management"
          },
          "dependencies": [
            "google_compute_network.elk-management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "elk-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "eventer-jenkins-cluster/us-central1/private-router-elk-management/nat-elk-management",
            "min_ports_per_vm": 0,
            "name": "nat-elk-management",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "eventer-jenkins-cluster",
            "region": "us-central1",
            "router": "private-router-elk-management",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/private-10-1-0-0",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              },
              {
                "name": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/private-10-1-2-0",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.elk-management",
            "google_compute_router.elk-private_router",
            "google_compute_subnetwork.elk-private_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "elk-private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-30T08:23:14.999-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/private-10-1-0-0",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "private-10-1-0-0",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "eventer-jenkins-cluster",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/private-10-1-0-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.elk-management"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-30T08:23:15.180-07:00",
            "gateway_address": "10.1.2.1",
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/private-10-1-2-0",
            "ip_cidr_range": "10.1.2.0/24",
            "name": "private-10-1-2-0",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "eventer-jenkins-cluster",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/private-10-1-2-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.elk-management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "elk-public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-30T08:23:16.056-07:00",
            "gateway_address": "10.1.1.1",
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/public-10-1-1-0",
            "ip_cidr_range": "10.1.1.0/24",
            "name": "public-10-1-1-0",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "eventer-jenkins-cluster",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/public-10-1-1-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.elk-management"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-30T08:23:15.084-07:00",
            "gateway_address": "10.1.3.1",
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/public-10-1-3-0",
            "ip_cidr_range": "10.1.3.0/24",
            "name": "public-10-1-3-0",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/elk-management",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "eventer-jenkins-cluster",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/public-10-1-3-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.elk-management"
          ]
        }
      ]
    }
  ]
}